--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>hello</title>
   </head>
   <body>
-    <script src="函数/funcInBlock.js"></script>
+    <script src="模块/u.js" type="module"></script>
   </body>
 </html>
